objects/revcult__Insight_Risk__c.object
<CustomObject>
    <fields>
        <fullName>revcult__Insight_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Insight Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>revcult__Risk_Rating__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Scoring_Policy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scoring Policy</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Insight Risk</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Insight Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insight Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>